update homepage images and styling

--- a/src/app/non-secure/home/home.component.html
+++ b/src/app/non-secure/home/home.component.html
@@ -1,21 +1,21 @@
 
   <carousel>
     <slide>
-      <img src="../../../assets/images/soldierA.jpg" alt="first slide" style="display: block; max-height: 500px; width: 100%;">
+      <img src="../../../assets/images/soldierA.jpg" alt="first slide" class="carousel-image mx-auto" >
       <div class="carousel-caption d-none d-md-block">
         <h3>Create, Modify, Manage Game Modes</h3>
         <p>Create game modes for regular game play or custom and unique game modes for events.</p>
       </div>
     </slide>
     <slide>
-      <img src="../../../assets/images/soldierB.jpg" alt="second slide" style="display: block; max-height: 500px; width: 100%;">
+      <img src="../../../assets/images/device_with_blue_band.png" alt="second slide" class="carousel-image mx-auto">
       <div class="carousel-caption d-none d-md-block">
         <h3>Control the game play with live updates</h3>
         <p>Power to spawn new objectives and modify existing objectives to even out strength in battle.</p>
       </div>
     </slide>
     <slide>
-      <img src="../../../assets/images/soldierC.jpg" alt="third slide" style="display: block; max-height: 500px; width: 100%;">
+      <img src="../../../assets/images/Salina_Gambit_action.png" alt="third slide" class="carousel-image mx-auto">
       <div class="carousel-caption d-none d-md-block">
         <h3>Track Games Live</h3>
         <p>Track Active Game stats maps and more with live updates!</p>
