refine home page

--- a/src/app/non-secure/home/home.component.scss
+++ b/src/app/non-secure/home/home.component.scss
@@ -13,5 +13,7 @@ img.carousel-image {
 }
 
 slide div p, slide div h3{
-    color: #808080;
+    color: #000000;
+    background-color: rgb(255,255,255,0.5);
+    border-radius: 0.2rem;
 }
