shift map component to nonSecureAPI route

--- a/src/app/non-secure/mydevices/mydevices.component.scss
+++ b/src/app/non-secure/mydevices/mydevices.component.scss
@@ -30,7 +30,7 @@ div.view-btn {
     }
 
     width: 30%;
-    margin: 1rem;
+    margin: 1rem 0.5rem;
     display: inline-block;
     vertical-align: top;
 }
