--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
           <h3 *ngIf="isField" class="mb-3">{{currentVals.fieldName}}</h3>
           <p *ngIf="isField" class="mb-4">{{currentVals.profile}}</p>
           <h3 *ngIf="isPlayer" class="mb-3">{{currentVals.callSign}}</h3>
-          <p *ngIf="isPlayer" class="mb-4">{{currentVals.bio}}</p> 
+          <p *ngIf="isPlayer" class="mb-4">{{currentVals.bio}}</p>
         </div>
       </div>
 
@@ -51,9 +51,26 @@
 
 
             <ngx-charts-advanced-pie-chart [scheme]="colorScheme" [results]="pieData"
-              [gradient]="gradient" (select)="onSelect($event)" (activate)="onActivate($event)"
+              (select)="onSelect($event)" (activate)="onActivate($event)"
               (deactivate)="onDeactivate($event)">
             </ngx-charts-advanced-pie-chart>
+
+          </div>
+
+          <div class="row" *ngIf="isField">
+
+            <ngx-charts-area-chart-stacked
+              [scheme]="colorScheme"
+              [legend]="true"
+              [showXAxisLabel]="false"
+              [showYAxisLabel]="true"
+              [xAxis]="true"
+              [yAxis]="true"
+              [yAxisLabel]="Events"
+              [timeline]="true"
+              [results]="areaData"
+              (select)="onSelect($event)">
+            </ngx-charts-area-chart-stacked>
 
           </div>
         </div>
@@ -61,7 +78,7 @@
           Facebook Share
         </div>
       </form>
-      <div class="card">
+      <!-- <div class="card">
         <div class="card-header">
           <h2 class="center-cust">Individual Game Stats</h2>
         </div>
@@ -82,7 +99,7 @@
 
         </accordion-group>
         </accordion>
-      </div>
+      </div> -->
 
     </div>
   </div>
