use endTime for stacked area times. comment out accordion.

--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -67,7 +67,7 @@
               [xAxis]="true"
               [yAxis]="true"
               [yAxisLabel]="Events"
-              [timeline]="true"
+              [timeline]="false"
               [results]="areaData"
               (select)="onSelect($event)">
             </ngx-charts-area-chart-stacked>
