convert dashboard to sec/nonSec API routes

--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -59,6 +59,8 @@
 
           <div class="row" *ngIf="isField">
 
+            <h2 class="center-cust">Historical Game Stats</h2>
+
             <ngx-charts-area-chart-stacked
               [scheme]="colorScheme"
               [legend]="true"
