--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -37,15 +37,7 @@
       <form class="card">
         <div class="card-body">
 
-          <div class="row" *ngIf="isPlayer">
-            <ngx-charts-advanced-pie-chart  [scheme]="colorScheme" [results]="pieData"
-              [gradient]="gradient" (select)="onSelect($event)" (activate)="onActivate($event)"
-              (deactivate)="onDeactivate($event)">
-            </ngx-charts-advanced-pie-chart>
-
-          </div>
-
-          <div class="row" *ngIf="isField">
+          <div class="row">
 
                 <h2 class="center-cust">Combined Game Stats</h2>
 
@@ -57,7 +49,7 @@
 
           </div>
 
-          <div class="row" *ngIf="isField">
+          <div class="row">
 
             <h2 class="center-cust">Historical Game Stats</h2>
 
@@ -65,20 +57,22 @@
               [scheme]="colorScheme"
               [legend]="true"
               [showXAxisLabel]="false"
-              [showYAxisLabel]="true"
+              [showYAxisLabel]="false"
               [xAxis]="true"
               [yAxis]="true"
-              [yAxisLabel]="Events"
-              [timeline]="false"
+              [timeline]="true"
               [results]="areaData"
               (select)="onSelect($event)">
             </ngx-charts-area-chart-stacked>
 
           </div>
+
         </div>
+
         <div class="card-footer text-right">
           Facebook Share
         </div>
+
       </form>
       <!-- <div class="card">
         <div class="card-header">
