--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -10,7 +10,7 @@
             <h3 *ngIf="!gameCardData.length"> Whaaaa!?..There are no active games? </h3>
             <h5 *ngIf="!gameCardData.length"> Check back later. Games pop up all the time! </h5>
             <div
-                *ngFor="let gameData of gameCardData; let i = index"
+                *ngFor="let gameData of gameCardData;"
                 class="card user-card"
                 >
 
