--- a/src/app/secure/profile/profile.component.scss
+++ b/src/app/secure/profile/profile.component.scss
@@ -2,6 +2,11 @@
   margin: 1rem;
 }
 
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
+  
 div.col-6 {
   max-width: 100%;
 }
