use gameID on xAxis - time data overlapped with same date.

--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -58,7 +58,7 @@
               [legend]="true"
               [showXAxisLabel]="false"
               [showYAxisLabel]="false"
-              [xAxis]="true"
+              [xAxis]="false"
               [yAxis]="true"
               [timeline]="true"
               [results]="areaData"
