Do not show game # ... it's not sensical. Use index to number hist games

--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -19,7 +19,7 @@
                     <div class="btn-primary btn view-btn" [value]="gameData.id" (click)="selectActiveGame($event)"> VIEW </div>
 
                     <h5> {{gameData.description}} </h5>
-                    <p> Game# {{gameData.id}} </p>
+                    <!-- <p> Game# {{gameData.id}} </p> -->
 
                 </div>
 
