--- a/src/app/secure/start-game/start-game.component.html
+++ b/src/app/secure/start-game/start-game.component.html
@@ -32,10 +32,10 @@
                         <!-- <h5 *ngIf="mode == 'active'" class="modal-title" id="exampleModalLabel">Dynamic Game Configurations</h5> -->
                         <h4> WARNING: Changes impact live gameplay. </h4>
 
-                        <button *ngIf="!gameData.is_paused" type="button" class="btn btn-warning"
+                        <button *ngIf="!gameData?.is_paused" type="button" class="btn btn-warning"
                             (click)="pauseGame()">PAUSE</button>
 
-                        <button *ngIf="gameData.is_paused" type="button" class="btn btn-info"
+                        <button *ngIf="gameData?.is_paused" type="button" class="btn btn-info"
                             (click)="pauseGame()">RESUME</button>
 
                         <button type="button" class="btn btn-danger"
