--- a/src/app/secure/profile/profile.component.html
+++ b/src/app/secure/profile/profile.component.html
@@ -19,8 +19,8 @@
             <fieldset class="fieldset">
               <h3 class="fieldset-title">Personal Info</h3>
               <div class="form-group avatar">
-                <figure class="figure col-md-2 col-sm-3 col-xs-12">
-                  <img id="profileImage" class="img-rounded img-responsive" src="{{currentVals.imageData}}"
+                <figure class="figure col-md-2">
+                  <img id="profileImage" class="img img-responsive" src="{{currentVals.imageData}}"
                     onerror="this.onerror=null; this.src='https://bootdey.com/img/Content/avatar/avatar1.png'" alt="">
                 </figure>
                 <div class="form-inline col-md-10 col-sm-9 col-xs-12">
@@ -210,7 +210,7 @@
                   <td>{{rfid.uid}}</td>
                   <td>{{rfid.creationDate}}</td>
                   <td>{{rfid.deactivated}}</td>
-                </tr> 
+                </tr>
               </table>
               <hr>
               <h4>Connect a new wristband to Profile:</h4>
