--- a/src/app/secure/profile/profile.component.scss
+++ b/src/app/secure/profile/profile.component.scss
@@ -1,3 +1,14 @@
+img#profileImage {
+  float: none;
+  width: 100%
+}
+.col-md-2 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 35%;
+    flex: 0 0 35%;
+    max-width: 35%;
+}
+
 .panel {
   margin: 1rem;
 }
@@ -6,7 +17,7 @@ table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
   }
-  
+
 div.col-6 {
   max-width: 100%;
 }
