--- a/src/app/secure/profile/profile.component.html
+++ b/src/app/secure/profile/profile.component.html
@@ -21,7 +21,7 @@
               <div class="form-group avatar">
                 <figure class="figure col-md-2">
                   <img id="profileImage" class="img img-responsive" src="{{currentVals.imageData}}"
-                    onerror="this.onerror=null; this.src='https://bootdey.com/img/Content/avatar/avatar1.png'" alt="">
+                    onerror="this.onerror=null" alt="">
                 </figure>
                 <div class="form-inline col-md-10 col-sm-9 col-xs-12">
                   <input formControlName="profileImage" (change)="getFile($event)" type="file"
