--- a/src/app/global/edit-game/edit-game.component.html
+++ b/src/app/global/edit-game/edit-game.component.html
@@ -1,9 +1,12 @@
 <form [formGroup]="gameModeForm" (ngSubmit)="onNewGameModeFormSubmit()">
+
   <input type="hidden" formControlName="id">
+
   <div class="form-group">
     <label for="name">Name</label>
     <input type="text" class="form-control" id="name" placeholder="Game Mode Name" formControlName="name">
   </div>
+
   <div class="form-group">
     <label for="map">Map</label>
     <select formControlName="map" class="form-control" (change)="changeMap($event)">
@@ -12,7 +15,10 @@
     </select>
   </div>
 
+
+
   <table class="table table-bordered" formArrayName="teams">
+
     <tr>
       <th colspan="2">Assemble the Teams:<button type="button" (click)="addTeam()" class="btn btn-primary keepRight">
           Add More</button></th>
@@ -37,11 +43,15 @@
     </div>
 
   </table>
+
+  <button type="submit" [disabled]="!isMapSelected" class="btn btn-primary btn-lg">Save</button>
+  <br/><br/>
+
   <div *ngIf="isMapSelected">
     <app-device-list  [config]="deviceListConfigs" (nodeConfigs)="nodeConfigs($event)"></app-device-list>
   </div>
   <br />
-  <button type="submit" [disabled]="!isMapSelected" class="btn btn-primary">Save</button>
+  <button type="submit" [disabled]="!isMapSelected" class="btn btn-primary btn-lg">Save</button>
 
 
 </form>
