add device status guide to footer

--- a/src/app/global/footer/footer.component.html
+++ b/src/app/global/footer/footer.component.html
@@ -26,21 +26,20 @@
             <h4>Product Updates</h4>
             <ul class="list-unstyled">
               <li><a href="#"></a></li>
-              <li><a  [routerLink]="['/non-secure/feature-list']">Feature List</a></li> 
+              <li><a  [routerLink]="['/non-secure/feature-list']">Feature List</a></li>
             </ul>
           </div>
         </div>
-        
+
         <div class="col-md-3 col-sm-6">
           <!--Column1-->
           <div class="footer-pad">
             <h4>How to's</h4>
             <ul class="list-unstyled">
-              <li><a href="../../../assets/docs/FieldFlyer.pdf" download="BuyingGuide.pdf">Field Buying Guide</a></li> 
-                <li><a href="../../../assets/docs/Skirmesh Quick Start Guide.pdf" download="QuickStart.pdf">Field User Guide</a></li> 
-              <li>
-                <a href="#"></a>
-              </li>
+                <li> <a href="../../../assets/docs/FieldFlyer.pdf" download="BuyingGuide.pdf"> Field Buying Guide </a></li>
+                <li> <a href="../../../assets/docs/Skirmesh Quick Start Guide.pdf" download="QuickStart.pdf"> Field User Guide</a> </li>
+                <li> <a href="../../../assets/docs/Skirmesh Device Status Guide.pdf" download="DeviceStatus.pdf"> Device Status Guide</a> </li>
+                <!-- <li> <a href="#"></a>  </li> -->
             </ul>
           </div>
         </div>
@@ -49,7 +48,7 @@
               <ul class="social-network social-circle">
                <li><a href="https://www.facebook.com/pages/category/Sports---Recreation/Skirmesh-108898537907505/" class="icofacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
                <li><a href="mailto:skirmesh.net@gmail.com" class="icotwitter" title="twitter"><i class="fa fa-google"></i></a></li>
-              </ul>				
+              </ul>
           </div>
       </div>
       <div class="row">
@@ -57,8 +56,8 @@
               <p class="text-center">&copy; Copyright 2021 - Skirmesh.  All rights reserved.</p>
           </div>
       </div>
-  
-  
+
+
     </div>
     </div>
   </footer>
