Add "by signing up you agree" statement.

--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -138,6 +138,7 @@
 								</div>
 							</div>
 						</form>
+
 						<div id="or" class="or">
 							<span>or signup using</span>
 						</div>
@@ -161,6 +162,11 @@
 						</div>
 						<a [routerLink]="['/auth/login']" class="additional-link">Have an Account?
 							<span>LOGIN</span></a>
+
+						<div class="center-cust row">
+							By signing up, you agree to our&nbsp;<a [routerLink]="['/non-secure/privacy-policy']"> privacy policy </a>.
+						</div>
+						
 					</div>
 				</div>
 			</div>
