map size fix and pass reset

--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -60,7 +60,7 @@
 
 
 								<div class="col-6 text-right">
-									<button type="button" class="btn btn-link px-0">Forgot password?</button>
+									<button type="button" class="btn btn-link px-0" [routerLink]="['/auth/pass-reset']">Forgot password?</button>
 								</div>
 								<div class="row">
 									<div id="userLoginFaileddMessage" class="alert alert-danger d-none center-cust">
