--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -58,7 +58,7 @@
                     aria-labelledby="v-pills-home-tab">
                     <div class="btn-primary btn fb_share" data-href="https://play.skirmesh.net/non-secure/live-games" data-layout="button_count" data-size="small"><a target="_blank" href="{{fbShareUrl}}" class="fb-xfbml-parse-ignore">Share To Facebook!</a></div>
                     <div class="pull-md-3">
-                        <div>
+                        <div class="gameDetails"> 
                             <app-map [mapID]="map" [deviceData]="devices"></app-map>
                         </div>
                     </div>
