--- a/src/app/global/map/map.component.scss
+++ b/src/app/global/map/map.component.scss
@@ -19,7 +19,7 @@ path.location.owned {
 }
 
 .map {
-    width: 100%;
+    height:100%; width:auto;
     @media only screen and (max-width: 600px) {
         height: 100%;
         width: 100%;
