--- a/src/app/non-secure/mydevices/mydevices.component.scss
+++ b/src/app/non-secure/mydevices/mydevices.component.scss
@@ -2,6 +2,14 @@
     color: white;
     text-shadow: 1px 1px rgba(0,0,0,0.5), -1px 1px rgba(0,0,0,0.5), 1px -1px rgba(0,0,0,0.5), -1px -1px rgba(0,0,0,0.5);
 }
+.gameDetails{
+
+    width:50vw;
+    height:50vh; 
+    display:table-cell;
+    vertical-align:middle;
+    text-align:center;
+}
 .fb_share a{
     color: white !important;
 }
