styling for configured bomb locations

--- a/src/app/global/map/map.component.scss
+++ b/src/app/global/map/map.component.scss
@@ -23,42 +23,6 @@ path.location.owned {
     width: 100%;
 }
 
-// .blinking{
-//     animation:blinkingText 1.2s infinite;
-//     opacity: 75%;
-// }
-// @keyframes pulsate {
-//     from {transform: scale(0.8);
-//         opacity: 1;
-//     }
-//     to {transform: scale(1.2);
-//           opacity: 0;
-//     }
-//   }
-//   @keyframes draw {
-//     0% {
-//         stroke-dashoffset: 0;
-//         opacity: 0.25;
-//     }
-//     50% {
-//         stroke-dashoffset: 10;
-//         fill: #FF0000;
-//         opacity: 0.75;
-//         transform: scale(0.9);
-//     }
-//     100% {
-//         stroke-dashoffset: 20;
-//         opacity: 0.25;
-//     }
-// }
-// @keyframes blinkingText{
-//
-//     // 0%{     fill: #ffffff;    }
-//     // 49%{    fill: #ffffff; }
-//     60%{    fill: transparent; }
-//     99%{    fill:transparent;  }
-//     // 100%{   fill: #ffffff;    }
-// }
 
 .beacon-container {
     position: relative;
@@ -77,52 +41,63 @@ path.location.owned {
           opacity: 0;
     }
 }
-// path {
-//   opacity: 0;
-//   transform-origin: center;
-//   transform-box: fill-box;
-// }
-// path:hover {
-//   fill: var(--WHITE);
-//   opacity: 0.25;
-//   transform: scale(1.1);
-// }
-// path.owned {
-//   opacity: 0.5;
-// }
-// div.roster {
-//   max-height: 22.8em;
-//   overflow-y: auto;
-//   display: flex;
-//   flex-direction: column;
-// }
-// #tooltip {
-//   color: var(--BLACK);
-//   background: #FFFFFF80;
-//   border-radius: 0.2em;
-//   padding: 0.1em;
-//   z-index: 10;
-// }
-// path.demo {
-//   animation: draw 2s infinite linear;
-//   stroke-width: 2px;
-//   stroke-dasharray: 10;
-//   stroke: #FF0000;
-//   fill: #CC5500;
-// }
-// @keyframes draw {
-//   0% {
-//       stroke-dashoffset: 0;
-//       opacity: 0.25;
-//   }
-//   50% {
-//       stroke-dashoffset: 10;
-//       fill: #FF0000;
-//       opacity: 0.75;
-//       transform: scale(0.9);
-//   }
-//   100% {
-//       stroke-dashoffset: 20;
-//       opacity: 0.25;
-//   }
-// }
+
+
+path.location.armed {
+    opacity: 0.5;
+    fill: #CC5500;
+    animation: armed 0.75s infinite;
+    transform-origin : center;
+    transform-box    : fill-box;
+}
+@keyframes armed {
+    from {transform: scale(0.2);
+        opacity: 0.6;
+    }
+    to {transform: scale(0.9);
+          opacity: 0;
+    }
+}
+
+path.location.disarmed {
+    opacity: 0.5;
+    fill: #00A000;
+    animation: disarmed 2s infinite;
+    transform-origin : center;
+    transform-box    : fill-box;
+}
+@keyframes disarmed {
+    from {transform: scale(0.6);
+        opacity: 0.5;
+    }
+    to {transform: scale(0.4);
+          opacity: 0;
+    }
+}
+
+
+path.demo {
+  animation: explode 1.5s infinite linear;
+  transform-origin : center;
+  transform-box    : fill-box;
+  stroke-width: 2px;
+  stroke-dasharray: 10;
+  stroke: #FF0000;
+  fill: #CC5500;
+}
+@keyframes explode {
+  0% {
+      stroke-dashoffset: 0;
+      opacity: 0.25;
+  }
+  50% {
+      stroke-dashoffset: 10;
+      fill: #FF0000;
+      opacity: 0.75;
+      transform: scale(0.9);
+  }
+  100% {
+      stroke-dashoffset: 20;
+      opacity: 0.25;
+  }
+}
