--- a/src/app/auth/pass-reset/pass-reset.component.html
+++ b/src/app/auth/pass-reset/pass-reset.component.html
@@ -1,10 +1,15 @@
 <div class="row justify-content-center">
+
     <div class="col-6">
-        <h4>Enter your email and we will send you an email to reset your password</h4>
+
+        <h4> Enter your email to reset your password. </h4>
+
         <div class="form-group">
             <input formControlName="email" type="text" class="form-control" placeholder="Email">
         </div>
 
-        <button type="submit" (click)="onSubmit()" class="btn btn-primary cust_skir_signup"> Send Reset Password Email</button>
+        <button type="submit" (click)="onSubmit()" class="btn btn-primary cust_skir_signup"> Submit </button>
+
     </div>
+    
 </div>
