--- a/src/app/auth/pass-reset/pass-reset.component.html
+++ b/src/app/auth/pass-reset/pass-reset.component.html
@@ -12,7 +12,18 @@
                        class="form-control"
                        placeholder="Email"/>
             </div>
-
+            <div class="row">
+                <div id="passResetEmailSent" class="alert alert-danger d-none center-cust">
+                    Please check your email from Skirmesh to login and reset your password.<br>
+                    If no email recieved please try again or <a [routerLink]="['/non-secure/contact-us']">contact us from
+                        our contact us page</a>
+                </div>
+                <div id="passResetEmailFailed" class="alert alert-danger d-none center-cust">
+                    We are sorry we were not able to send you ea email to reset your password. <br>
+                    Please try again or <a [routerLink]="['/non-secure/contact-us']">contact us from
+                        our contact us page</a>
+                </div>
+            </div>
         </form>
 
         <button
