green color for sccess

--- a/src/app/auth/pass-reset/pass-reset.component.html
+++ b/src/app/auth/pass-reset/pass-reset.component.html
@@ -13,7 +13,7 @@
                        placeholder="Email"/>
             </div>
             <div class="row">
-                <div id="passResetEmailSent" class="alert alert-danger d-none center-cust">
+                <div id="passResetEmailSent" class="alert alert-primary d-none center-cust">
                     Please check your email from Skirmesh to login and reset your password.<br>
                     If no email recieved please try again or <a [routerLink]="['/non-secure/contact-us']">contact us from
                         our contact us page</a>
