--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -114,8 +114,47 @@
                     aria-labelledby="v-pills-settings-tab">
                     <h3 class="center-cust"> Event History</h3>
 
-                    <ngx-datatable [rows]="allActions" [columns]="allActionsColumns"> </ngx-datatable>
+                    <!-- <ngx-datatable [rows]="allActions" [columns]="allActionsColumns"> </ngx-datatable> -->
+                    <ngx-datatable class="material" [rows]="allActions" [columnMode]="'standard'" [headerHeight]="50" [footerHeight]="50"
+                    [rowHeight]="50" [scrollbarV]="true"  >
+                  
+                    <ngx-datatable-column name="Team">
+                      <ng-template let-row="row" ngx-datatable-cell-template>
+                        {{row.team}}
+                      </ng-template>
+                    </ngx-datatable-column>
+                  
+                    <ngx-datatable-column name="Name">
+                      <ng-template let-row="row" ngx-datatable-cell-template>
+                        {{row.name}}
+                      </ng-template>
+                    </ngx-datatable-column>
+                  
+                    <ngx-datatable-column name="Action">
+                        <ng-template let-row="row" ngx-datatable-cell-template>
+                            {{row.action}}
+                          </ng-template>
+                    </ngx-datatable-column>
+                    
+                    <ngx-datatable-column name="Location">
+                        <ng-template let-row="row" ngx-datatable-cell-template>
+                            {{row.location}}
+                          </ng-template>
+                    </ngx-datatable-column>
+                    
+                    <ngx-datatable-column name="Points">
+                        <ng-template let-row="row" ngx-datatable-cell-template>
+                            {{row.points}}
+                          </ng-template>
+                    </ngx-datatable-column>
 
+                    <ngx-datatable-column name="Time">
+                        <ng-template let-row="row" ngx-datatable-cell-template>
+                            {{row.timestamp}}
+                          </ng-template>
+                    </ngx-datatable-column>
+                  
+                  </ngx-datatable>
                     <!-- <table class="table table-striped">
                         <thead>
                             <tr>
