--- a/src/app/non-secure/mydevices/mydevices.component.scss
+++ b/src/app/non-secure/mydevices/mydevices.component.scss
@@ -1,3 +1,6 @@
+@import '../../../../node_modules/@swimlane/ngx-datatable/index.scss';
+@import '../../../../node_modules/@swimlane/ngx-datatable/themes/bootstrap.scss';
+@import '../../../../node_modules/@swimlane/ngx-datatable/assets/icons.css';
 .cust_text{
     color: white;
     text-shadow: 1px 1px rgba(0,0,0,0.5), -1px 1px rgba(0,0,0,0.5), 1px -1px rgba(0,0,0,0.5), -1px -1px rgba(0,0,0,0.5);
