use localeTime in game card

--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -26,7 +26,7 @@
                 <div class="card-body">
 
                     <p>
-                        Start: {{gameData.startTime.slice(0,12)}} {{gameData.startTime.slice(17,22)}}
+                        Start: {{gameData.startTime}}
                     </p>
 
                     <div>
